# gnn_energy_loss

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
models/: __init__.py  builder.py  losses.py  simple_gatv2.py  simple_gcn.py
shared/: __init__.py  collators.py  io_manager.py  metrics.py  npz_datamodule.py  npz_dataset.py  random.py  visualization.py
skypilot/: sky-launch.yaml  sky-predict.yaml  sky-prepare.yaml  sky-train.yaml  sky-visualize.yaml
tasks/deepjeb/: __init__.py  __main__.py  datamodule.py  model.py  predict.py  preparation.py  training.py  visualize.py
tasks/deepjeb/configs/: predict.yaml  prepare.yaml  train-mini.yaml  train.yaml  visualize.yaml
tasks/deepjeb/configs/dataset/: base.yaml  small.yaml
tasks/deepjeb/configs/model/: gatv2.yaml  gcn.yaml
tasks/hdwia/: __init__.py  __main__.py  datamodule.py  model.py  predict.py  preparation.py  training.py  visualize.py
tasks/hdwia/configs/: predict.yaml  prepare.yaml  train-mini.yaml  train.yaml  visualize.yaml
tasks/hdwia/configs/dataset/: base.yaml  small.yaml
tasks/hdwia/configs/model/: gatv2.yaml  gcn.yaml
